--- a/src/app/employee-details/inactive-employee/inactive-employee.component.html
+++ b/src/app/employee-details/inactive-employee/inactive-employee.component.html
@@ -10,10 +10,9 @@
     >
       <ng-template pTemplate="caption">
         <div id="employee_details_searchBar">
-          <h2>Inactive Employee List</h2>
+          <h3>Inactive Employee List</h3>
           <input
             pInputText
-            class="p-inputtext"
             type="text"
             (input)="dt1.filterGlobal($any($event.target).value, 'contains')"
             placeholder="Search keyword"
@@ -31,7 +30,13 @@
       </ng-template>
       <ng-template pTemplate="body" let-lefted>
         <tr>
-          <td><img id="inactive_employe_img" src=" lefted.Photo" /></td>
+          <td>
+            <img
+              id="inactive_employe_img"
+              src="{{ lefted.photo }}"
+              id="employee_img"
+            />
+          </td>
           <td>{{ lefted.employeeName }}</td>
           <td>{{ lefted.EmployeeNo }}</td>
           <td>{{ lefted.deportment }}</td>
