--- a/src/app/attendance/add-attendance/add-attendance.component.css
+++ b/src/app/attendance/add-attendance/add-attendance.component.css
@@ -11,10 +11,22 @@
     margin-top: 15px;
     display: flex;
     justify-content:end;
+    border-radius: 2px;
 }
-.table-disabled{
-    opacity: 0.5;
-    pointer-events: none
-    ;
+
+
+#search_bar_holder{
+    height: 50px;
+    margin-bottom: 10px;
+    display:flex;
+    justify-content:space-between ;
+    align-items: center;
+}
+
+h2{
+    margin-bottom: 0%;
+    text-align: center;
+    font-weight: bold;
+    font-family: sans-serif;
 }
 
