--- a/src/app/employee-details/bar-chart/bar-chart.component.html
+++ b/src/app/employee-details/bar-chart/bar-chart.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-6">
     <h4>Employee-Chart</h4>
-    <canvas id="canvas" >{{chartdata}}</canvas>
+    <canvas id="canvas"></canvas>
   </div>
 </div>
 
