--- a/src/app/employee-details/inactive-employee/inactive-employee.component.css
+++ b/src/app/employee-details/inactive-employee/inactive-employee.component.css
@@ -16,7 +16,8 @@
 }
 
 .employee_active_status_btn_space {
-  height: 30px;
+  margin-top: 10px;
+  height: 60px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -40,4 +41,32 @@
 
 #no_details_text {
   text-align: center;
+}
+
+.emp_active_yes_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid;
+  border-radius: 10px;
+  width: 85px;
+  height: 45px;
+}
+
+.emp_active_yes_btn:hover {
+  transform: scale(1.1);
+}
+
+.emp_active_no_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid;
+  border-radius: 10px;
+  width: 85px;
+  height: 45px;
+}
+
+.emp_active_no_btn:hover {
+  transform: scale(1.1);
 }
