--- a/src/app/employee-details/inactive-employee/inactive-employee.component.css
+++ b/src/app/employee-details/inactive-employee/inactive-employee.component.css
@@ -6,7 +6,7 @@
   margin: 10px auto;
 }
 
-#employee_img {
+#inactive_employe_img {
   width: 50px;
   height: 50px;
 }
@@ -41,32 +41,4 @@
 
 #no_details_text {
   text-align: center;
-}
-
-.emp_active_yes_btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid;
-  border-radius: 10px;
-  width: 85px;
-  height: 45px;
-}
-
-.emp_active_yes_btn:hover {
-  transform: scale(1.1);
-}
-
-.emp_active_no_btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid;
-  border-radius: 10px;
-  width: 85px;
-  height: 45px;
-}
-
-.emp_active_no_btn:hover {
-  transform: scale(1.1);
 }
