--- a/src/app/attendance/add-attendance/add-attendance.component.css
+++ b/src/app/attendance/add-attendance/add-attendance.component.css
@@ -14,7 +14,6 @@
     border-radius: 2px;
 }
 
-
 #search_bar_holder{
     height: 50px;
     margin-bottom: 10px;
@@ -30,3 +29,7 @@ h2{
     font-family: sans-serif;
 }
 
+#table_img{
+    width: 50px;
+    height: 50px;
+}
