finished Ateendance Page

--- a/src/app/attendance/add-attendance/add-attendance.component.html
+++ b/src/app/attendance/add-attendance/add-attendance.component.html
@@ -13,7 +13,7 @@
     [filterDelay]="0"
   >
     <ng-template pTemplate="caption">
-      <h2>Attendance list</h2>
+      <h2 id="table_attendance_title">Attendance list</h2>
       <div id="search_bar_holder">
         <p-dropdown
           [options]="departments"
