--- a/src/app/attendance/add-attendance/add-attendance.component.css
+++ b/src/app/attendance/add-attendance/add-attendance.component.css
@@ -22,7 +22,7 @@
     align-items: center;
 }
 
-h2{
+#table_attendance_title{
     margin-bottom: 0%;
     text-align: center;
     font-weight: bold;
