--- a/src/app/employee-details/add-employee/add-employee.component.css
+++ b/src/app/employee-details/add-employee/add-employee.component.css
@@ -1,37 +1,35 @@
-body {
-  margin: 20px;
+.main {
+  background: url('../../../assets/images/bgimg.jpg');
+  background-size: cover;
 }
 #heading {
-  background-color: #3a81f6;
-  margin: 15px;
+  background-color: #081739;
   padding: 15px;
   border-radius: 5px;
   color: white;
   font-size: x-large;
 }
-:host >>> .emp-form {
-  margin-left: 10%;
-  margin-right: 10%;
+.emp-form {
+  margin: 2%;
 }
 .star{
   color: #e24f4f;
 }
 
-/* .photo {
-  display: block;
-  position: relative;
-  height: 150px;
-  width: 150px;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 50%;
-} */
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50%;
   border: 2px solid #e0e4e8;
+}
+#photoLabel{
+  font-weight: bold;
+  font-size: medium;
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 #photoError{
   float: right;
