--- a/src/app/attendance/add-attendance/add-attendance.component.css
+++ b/src/app/attendance/add-attendance/add-attendance.component.css
@@ -9,7 +9,7 @@
 .submitButton
 {
     margin-top: 15px;
-    display: flex;
+    display: flex;  
     justify-content:end;
     border-radius: 2px;
 }
@@ -23,6 +23,8 @@
 }
 
 #table_attendance_title{
+    display: flex;
+    justify-content: center;
     margin-bottom: 0%;
     text-align: center;
     font-weight: bold;
@@ -33,3 +35,25 @@
     width: 50px;
     height: 50px;
 }
+
+
+.present_checkbox:hover{
+    font-weight: bold;
+    color: rgb(116, 204, 116);
+}
+
+.absent_checkbox:hover{
+   color: rgb(190, 92, 92);
+   font-weight: bold;
+}
+.confirmation_dialog_box {
+    width: max-content;
+  }
+  
+.confirmation_status_btn {
+    margin-top: 58px;
+    height: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
