--- a/src/app/employee-details/profile-details/profile-details.component.css
+++ b/src/app/employee-details/profile-details/profile-details.component.css
@@ -1,13 +1,35 @@
 #page_heading {
-  background-color: blue;
+  background-color: #081739;
   color: aliceblue;
   padding: 15px;
   border-radius: 5px;
   font-size: x-large;
   width: 100%;
+  top: 50px;
 }
-/* 
-tr:hover {
-  color: black;
-  background-color: #eeeeee;
-} */
+
+.page_title {
+  position: sticky;
+}
+
+td {
+  font-size: small;
+}
+.edit_button {
+  background-color: #081739;
+  color: aliceblue;
+}
+
+.emptydata {
+  min-width: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: x-large;
+  color: #1f1fde;
+}
+
+.department_filter {
+  float: right;
+  right: 20px;
+}
