--- a/src/app/employee-details/add-employee/add-employee.component.html
+++ b/src/app/employee-details/add-employee/add-employee.component.html
@@ -2,7 +2,7 @@
   <h3 id="heading">Add Employee Details</h3>
   <div class="emp-form">
     <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
-      <div id="photoBox">
+      <div id="photoBox" class="field">
         <label for="empPhoto" id="photoLabel"
           >Employee Photo<span class="star">*</span></label
         >
@@ -36,14 +36,13 @@
         <label for="EmployeeNo" class="block"
           >Employee Number <span class="star">*</span></label
         >
-        <p-inputNumber
+        <input
+          type="text"
+          pInputText
           formControlName="EmployeeNo"
           placeholder="Enter Employee Number"
-          mode="decimal"
-          [useGrouping]="false"
-          styleClass="inputField"
-        >
-        </p-inputNumber>
+          class="inputField"
+        />
         <div
           *ngIf="submitted && form['EmployeeNo'].errors"
           class="p-error block"
@@ -169,59 +168,65 @@
           </div>
         </div>
       </div>
+
       <div class="field">
         <label for="isActive" class="block"
           >Active Status <span class="star">*</span></label
         >
-        <div class="flex flex-wrap gap-3">
-          <div class="flex align-items-center">
+        <div class="inputRadio">
+          <div class="radioBtn">
             <p-radioButton
-              value="true"
+              value = true
               formControlName="active"
             ></p-radioButton>
-            <label for="active" class="sub-label">Active</label>
+            <span class="radioLabel">Active</span>
           </div>
-          <div class="flex align-items-center">
-            <p-radioButton value="inactive" [disabled]="true"></p-radioButton>
-            <label for="inactive" class="sub-label">Inactive</label>
+          <div class="radioBtn">
+            <p-radioButton
+              value = false
+              formControlName="active"
+              [disabled]="true"
+            ></p-radioButton>
+            <span class="radioLabel">inActive</span>
           </div>
-        </div>
-        <div *ngIf="submitted && form['active'].errors" class="p-error block">
-          <div *ngIf="form['active'].errors['required']">
-            Active Status is required
+          <div *ngIf="submitted && form['active'].errors" class="p-error block">
+            <div *ngIf="form['active'].errors['required']">
+              Active Status is required
+            </div>
           </div>
         </div>
       </div>
+
       <div class="field">
         <label for="gender" class="block"
           >Gender <span class="star">*</span></label
         >
-        <div class="flex flex-wrap gap-3">
-          <div class="flex align-items-center">
+        <div class="inputRadio">
+          <div class="radioBtn">
             <p-radioButton
               value="male"
               formControlName="gender"
             ></p-radioButton>
-            <label for="male" class="sub-label">Male</label>
+            <span class="radioLabel">Male</span>
           </div>
-          <div class="flex align-items-center">
+          <div class="radioBtn">
             <p-radioButton
               value="female"
               formControlName="gender"
             ></p-radioButton>
-            <label for="female" class="sub-label">Female</label>
+            <span class="radioLabel">Female</span>
           </div>
-          <div class="flex align-items-center">
+          <div class="radioBtn">
             <p-radioButton
               value="others"
               formControlName="gender"
             ></p-radioButton>
-            <label for="others" class="sub-label">Others</label>
+            <span class="radioLabel">Others</span>
           </div>
-        </div>
-        <div *ngIf="submitted && form['gender'].errors" class="p-error block">
-          <div *ngIf="form['gender'].errors['required']">
-            Gender is required
+          <div *ngIf="submitted && form['gender'].errors" class="p-error block">
+            <div *ngIf="form['gender'].errors['required']">
+              Gender is required
+            </div>
           </div>
         </div>
       </div>
@@ -253,28 +258,28 @@
         <label for="nationality" class="block"
           >Nationality <span class="star">*</span></label
         >
-        <div class="flex flex-wrap gap-3">
-          <div class="flex align-items-center">
+        <div class="inputRadio">
+          <div class="radioBtn">
             <p-radioButton
               value="indian"
               formControlName="nationality"
             ></p-radioButton>
-            <label for="indian" class="sub-label">Indian</label>
+            <span class="radioLabel">Indian</span>
           </div>
-          <div class="flex align-items-center">
+          <div class="radioBtn">
             <p-radioButton
               value="others"
               formControlName="nationality"
             ></p-radioButton>
-            <label for="others" class="sub-label">Others</label>
+            <span class="radioLabel">Others</span>
           </div>
-        </div>
-        <div
-          *ngIf="submitted && form['nationality'].errors"
-          class="p-error block"
-        >
-          <div *ngIf="form['nationality'].errors['required']">
-            Nationality is required
+          <div
+            *ngIf="submitted && form['nationality'].errors"
+            class="p-error block"
+          >
+            <div *ngIf="form['nationality'].errors['required']">
+              Nationality is required
+            </div>
           </div>
         </div>
       </div>
@@ -415,11 +420,13 @@
       </div>
       <div class="field">
         <label for="ctc" class="block">CTC <span class="star">*</span></label>
-        <p-inputNumber
+        <input
+          type="number"
+          pInputText
           formControlName="CTC"
           placeholder="Enter CTC"
-          styleClass="inputField"
-        ></p-inputNumber>
+          class="inputField"
+        />
         <div *ngIf="submitted && form['CTC'].errors" class="p-error block">
           <div *ngIf="form['CTC'].errors['required']">CTC is required</div>
         </div>
@@ -428,11 +435,13 @@
         <label for="years" class="block"
           >Year of Experience <span class="star">*</span></label
         >
-        <p-inputNumber
+        <input
+          type="number"
+          pInputText
           formControlName="totalYears"
           placeholder="Enter Year of Experience"
-          styleClass="inputField"
-        ></p-inputNumber>
+          class="inputField"
+        />
         <div
           *ngIf="submitted && form['totalYears'].errors"
           class="p-error block"
@@ -446,32 +455,31 @@
         <label for="experience" class="block"
           >Experience / Fresher <span class="star">*</span></label
         >
-        <div class="flex flex-wrap gap-3">
-          <div class="flex align-items-center">
+        <div class="inputRadio">
+          <div class="radioBtn">
             <p-radioButton
               value="experience"
               formControlName="experience"
               inputId="experience"
               (change)="experienceRequired($event.target)"
             ></p-radioButton>
-            <label for="experience" class="sub-label">Exeperience</label>
+            <span class="radioLabel">Experience</span>
           </div>
-
-          <div class="flex align-items-center">
+          <div class="radioBtn">
             <p-radioButton
               value="fresher"
               formControlName="experience"
               inputId="fresher"
             ></p-radioButton>
-            <label for="fresher" class="sub-label">Fresher</label>
+            <span class="radioLabel">Fresher</span>
           </div>
-        </div>
-        <div
-          *ngIf="submitted && form['experience'].errors"
-          class="p-error block"
-        >
-          <div *ngIf="form['experience'].errors['required']">
-            Experience is required
+          <div
+            *ngIf="submitted && form['experience'].errors"
+            class="p-error block"
+          >
+            <div *ngIf="form['experience'].errors['required']">
+              Experience is required
+            </div>
           </div>
         </div>
       </div>
@@ -491,11 +499,13 @@
               <label for="years" class="block"
                 >Year of Experience <span class="star">*</span></label
               >
-              <p-inputNumber
+              <input
+                type="text"
+                pInputText
                 formControlName="years"
                 placeholder="Enter Year of Experience"
-                styleClass="inputField"
-              ></p-inputNumber>
+                class="inputField"
+              />
             </div>
             <div class="field">
               <label for="companyName" class="block"
